--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -1,1 +1,27 @@
-<p>signin works!</p>
+<div class="container mx-auto">
+  <div
+    class="col card shadow m-3 p-3 w-25 d-flex justify-content-center text-center align-items-center border border-black rounded"
+  >
+    <!-- PUT RELEVANT STUFF IN HERE -->
+    <form>
+      <label>Email:</label>
+      <br />
+      <input type="text" class="mt-2 text-center border border-black rounded" />
+      <br />
+
+      <label class="mt-2">Password:</label>
+      <br />
+      <input
+        type="password"
+        class="mt-2 text-center border border-black rounded"
+      />
+      <br />
+      <br />
+      <button class="btn btn-primary">Signin</button>
+      <br />
+      <label class="mt-2">Don't have an account?</label>
+      <br />
+      <button class="btn btn-success mt-2">Signup</button>
+    </form>
+  </div>
+</div>
