--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -1,1 +1,11 @@
-<p>list works!</p>
+<div class="contaier-fluid">
+  <div class="row text-center p-4 bg-white">
+    <h1>{{ username }}'s Todo-List</h1>
+  </div>
+  <div class="container mt-3">
+    <div class="row">
+      <input type="text" />
+      <button class="btn btn-primary">Add</button>
+    </div>
+  </div>
+</div>
