--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -1,7 +1,8 @@
-<div class="container mx-auto">
-  <div
-    class="col card shadow m-3 p-3 w-25 d-flex justify-content-center text-center align-items-center border border-black rounded"
-  >
+<div
+  class="container-fluid mx-auto d-flex justify-content-center text-center align-items-center"
+>
+<div class="row">
+  <div class="card shadow m-3 p-3 border border-black rounded">
     <!-- PUT RELEVANT STUFF IN HERE -->
     <form>
       <label>Email:</label>
@@ -24,4 +25,5 @@
       <button class="btn btn-success mt-2">Signup</button>
     </form>
   </div>
+</div>
 </div>
