--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,28 +1,35 @@
-<div class="container mx-auto">
-  <div
-    class="col card shadow m-3 p-3 w-25 d-flex justify-content-center text-center align-items-center border border-black rounded"
-  >
-    <!-- PUT RELEVANT STUFF IN HERE -->
-    <form>
-      <label>Username:</label>
-      <br />
-      <input type="text" class="mt-2 text-center border border-black rounded" />
-      <br />
-      <label class="mt-2">Email:</label>
-      <br />
-      <input type="text" class="mt-2 text-center border border-black rounded" />
-      <br />
+<div
+  class="container-fluid mx-auto d-flex justify-content-center text-center align-items-center"
+>
+  <div class="row">
+    <div class="card shadow m-3 p-3 border border-black rounded">
+      <!-- PUT RELEVANT STUFF IN HERE -->
+      <form>
+        <label>Username:</label>
+        <br />
+        <input
+          type="text"
+          class="mt-2 text-center border border-black rounded"
+        />
+        <br />
+        <label class="mt-2">Email:</label>
+        <br />
+        <input
+          type="text"
+          class="mt-2 text-center border border-black rounded"
+        />
+        <br />
 
-      <label class="mt-2">Password:</label>
-      <br />
-      <input
-        type="password"
-        class="mt-2 text-center border border-black rounded"
-      />
-      <br />
-      <br />
-      <button class="btn btn-primary">Signin</button>
-      <br /><br />
-    </form>
+        <label class="mt-2">Password:</label>
+        <br />
+        <input
+          type="password"
+          class="mt-2 text-center border border-black rounded"
+        />
+        <br />
+        <br />
+        <button class="btn btn-primary">Signin</button>
+      </form>
+    </div>
   </div>
 </div>
