--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -1,7 +1,7 @@
 <div
-  class="container-fluid mx-auto d-flex justify-content-center text-center align-items-center"
+  class="container-fluid mx-auto d-flex justify-content-center text-center align-items-center main-wrapper"
 >
-<div class="row">
+<div class="row ">
   <div class="card shadow m-3 p-3 border border-black rounded">
     <!-- PUT RELEVANT STUFF IN HERE -->
     <form>
