--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div
-  class="container-fluid mx-auto d-flex justify-content-center text-center align-items-center"
+  class="container-fluid mx-auto d-flex justify-content-center text-center align-items-center main-wrapper"
 >
   <div class="row">
     <div class="card shadow m-3 p-3 border border-black rounded">
