--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -28,7 +28,7 @@
         />
         <br />
         <br />
-        <button class="btn btn-primary">Signin</button>
+        <button class="btn btn-primary border border-black">Signin</button>
       </form>
     </div>
   </div>
