--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -1,11 +1,29 @@
-<div class="contaier-fluid">
-  <div class="row text-center p-4 bg-white">
-    <h1>{{ username }}'s Todo-List</h1>
+<div class="container-fluid">
+  <div class="row text-center p-3 card shadow bg-white">
+    <h1 class="">{{ username }}'s Todo-List</h1>
+    <h3>You have {{ testing.length }} items!</h3>
   </div>
   <div class="container mt-3">
     <div class="row">
-      <input type="text" />
-      <button class="btn btn-primary">Add</button>
+      <div class="card shadow p-4 d-flex algin-items-end">
+        <div class="col">
+          <label>Enter a new task:</label>
+          <input type="text" class="mt-2" />
+        </div>
+        <div class="col-auto pt-2">
+          <button class="btn btn-primary border border-black">Add</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row mt-3" *ngFor="let item of testing; let i = index">
+      <div class="card shadow p-3">
+        <label class="py-2">{{ testing[i] }}</label>
+        <button class="col btn btn-primary border border-black float-right">
+          X
+        </button>
+      </div>
     </div>
   </div>
 </div>
