--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -1,29 +1,32 @@
 <div
   class="container-fluid mx-auto d-flex justify-content-center text-center align-items-center main-wrapper"
 >
-<div class="row ">
-  <div class="card shadow m-3 p-3 border border-black rounded">
-    <!-- PUT RELEVANT STUFF IN HERE -->
-    <form>
-      <label>Email:</label>
-      <br />
-      <input type="text" class="mt-2 text-center border border-black rounded" />
-      <br />
+  <div class="row">
+    <div class="card shadow m-3 p-3 border border-black rounded">
+      <!-- PUT RELEVANT STUFF IN HERE -->
+      <form>
+        <label>Email:</label>
+        <br />
+        <input
+          type="text"
+          class="mt-2 text-center border border-black rounded"
+        />
+        <br />
 
-      <label class="mt-2">Password:</label>
-      <br />
-      <input
-        type="password"
-        class="mt-2 text-center border border-black rounded"
-      />
-      <br />
-      <br />
-      <button class="btn btn-primary">Signin</button>
-      <br />
-      <label class="mt-2">Don't have an account?</label>
-      <br />
-      <button class="btn btn-success mt-2">Signup</button>
-    </form>
+        <label class="mt-2">Password:</label>
+        <br />
+        <input
+          type="password"
+          class="mt-2 text-center border border-black rounded"
+        />
+        <br />
+        <br />
+        <button class="btn btn-primary border border-black">Signin</button>
+        <br />
+        <label class="mt-2">Don't have an account?</label>
+        <br />
+        <button class="btn btn-success mt-2 border border-black">Signup</button>
+      </form>
+    </div>
   </div>
-</div>
 </div>
