made some progress

--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -2,6 +2,7 @@
   <div class="row text-center p-3 card shadow bg-white">
     <h1 class="">{{ username }}'s Todo-List</h1>
     <h3>You have {{ testing.length }} items!</h3>
+    <button (click)="signOut()">Signout</button>
   </div>
   <div class="container mt-3">
     <div class="row">
