--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -4,12 +4,15 @@
   <div class="row">
     <div class="card shadow m-3 p-3 border border-black rounded">
       <!-- PUT RELEVANT STUFF IN HERE -->
-      <form>
+      <form #form="ngForm" (submit)="createUser(form)">
         <label>Username:</label>
         <br />
         <input
           type="text"
           class="mt-2 text-center border border-black rounded"
+          name="username"
+          ngModel
+          required
         />
         <br />
         <label class="mt-2">Email:</label>
@@ -17,6 +20,9 @@
         <input
           type="text"
           class="mt-2 text-center border border-black rounded"
+          name="email"
+          ngModel
+          required
         />
         <br />
 
@@ -25,10 +31,15 @@
         <input
           type="password"
           class="mt-2 text-center border border-black rounded"
+          name="password"
+          ngModel
+          required
         />
         <br />
         <br />
-        <button class="btn btn-primary border border-black">Signin</button>
+        <button type="submit" class="btn btn-primary border border-black">
+          Signup
+        </button>
       </form>
     </div>
   </div>
