--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -1,13 +1,15 @@
 <div class="container-fluid">
   <div class="row text-center p-3 card shadow bg-white">
     <h1 class="">{{ username }}'s Todo-List</h1>
-    <h3>You have {{ testing.length }} items!</h3>
-    <button (click)="signOut()">Signout</button>
+    <h3>You have {{ length }} items!</h3>
+    <button class="btn btn-primary m-2" (click)="signOut()">Signout</button>
+    <button class="btn btn-primary m-2" (click)="getUsersTasks()">
+      View tasks
+    </button>
   </div>
   <div class="container mt-3">
     <div class="row">
-      <form #form="ngForm"
-      (ngSubmit)="addItem(form)">
+      <form #form="ngForm" (ngSubmit)="addItem(form)">
         <div class="card shadow p-4 d-flex algin-items-end">
           <div class="col">
             <label>Enter a new task:</label>
@@ -21,10 +23,13 @@
     </div>
   </div>
   <div class="container">
-    <div class="row mt-3" *ngFor="let item of testing; let i = index">
+    <div class="row mt-3" *ngFor="let item of taskArr; let i = index">
       <div class="card shadow p-3">
-        <label class="py-2">{{ testing[i] }}</label>
-        <button (click)="removeItem()" class="col btn btn-primary border border-black float-right">
+        <label class="py-2">{{ taskArr[i].task }}</label>
+        <button
+          (click)="removeItem(taskArr[i].id)"
+          class="col btn btn-primary border border-black float-right"
+        >
           X
         </button>
       </div>
