--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
-  <div class="row text-center p-3 card shadow bg-white">
+  <div class="row text-center p-3  shadow bg-white">
     <h1 class="">{{ username }}'s Todo-List</h1>
-    <h3>You have {{ length }} items!</h3>
+    <h3>You have {{ taskArr.length }} items!</h3>
     <button class="btn btn-primary m-2" (click)="signOut()">Signout</button>
-    <button class="btn btn-primary m-2" (click)="getUsersTasks()">
+    <!-- <button class="btn btn-primary m-2" (click)="getUsersTasks()">
       View tasks
-    </button>
+    </button> -->
   </div>
   <div class="container mt-3">
     <div class="row">
@@ -36,3 +36,4 @@
     </div>
   </div>
 </div>
+<div class="footer pt-5"></div>
