--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -1,8 +1,12 @@
 <div class="container-fluid">
-  <div class="row text-center p-3  shadow bg-white">
+  <div
+    class="row text-center p-3 shadow bg-white d-flex justify-content-center"
+  >
     <h1 class="">{{ username }}'s Todo-List</h1>
     <h3>You have {{ taskArr.length }} items!</h3>
-    <button class="btn btn-primary m-2" (click)="signOut()">Signout</button>
+    <button class="btn btn-primary m-2 w-25" (click)="signOut()">
+      Signout
+    </button>
     <!-- <button class="btn btn-primary m-2" (click)="getUsersTasks()">
       View tasks
     </button> -->
@@ -13,7 +17,7 @@
         <div class="card shadow p-4 d-flex algin-items-end">
           <div class="col">
             <label>Enter a new task:</label>
-            <input type="text" class="mt-2" ngModel name="task" />
+            <input type="text" class="mt-2 px-1" ngModel name="task" />
           </div>
           <div class="col-auto pt-2">
             <button class="btn btn-primary border border-black">Add</button>
@@ -21,9 +25,7 @@
         </div>
       </form>
     </div>
-  </div>
-  <div class="container">
-    <div class="row mt-3" *ngFor="let item of taskArr; let i = index">
+    <div class="row mt-3 mx-1" *ngFor="let item of taskArr; let i = index">
       <div class="card shadow p-3">
         <label class="py-2">{{ taskArr[i].task }}</label>
         <button
