--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
 body {
   background-color: #6e72fc;
   background-image: linear-gradient(315deg, #6e72fc 0%, #ad1deb 74%);
+  background-position: fixed;
   height: 100vh;
 }
 
