--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,8 @@
 body {
   background-color: #6e72fc;
   background-image: linear-gradient(315deg, #6e72fc 0%, #ad1deb 74%);
-  background-position: fixed;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   height: 100vh;
 }
 
